fixed footer and add option div alignment

--- a/static/style.css
+++ b/static/style.css
@@ -86,6 +86,7 @@ a:active {
   color: black;
 }
 
+
 .new-poll-button {
   width: 100%;
   border: none;
@@ -93,6 +94,8 @@ a:active {
   color: white;
   padding: 10px;
   letter-spacing: 3px;
+  border: none;
+  border-radius: 2px;
 }
 
 .new-poll-button:hover {
@@ -100,6 +103,16 @@ a:active {
   color: white !important;
   transition: all .5s ease-in-out;
   transform: scale(1.1);
+}
+
+.new-poll-button:focus,
+.new-poll-button:active,
+.new-poll-button.active,
+.new-poll-button:focus:active {
+  background-image: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 progress[value] {
@@ -124,6 +137,8 @@ progress[value]::-webkit-progress-value {
   color: white;
   padding: 10px;
   letter-spacing: 5px;
+  border: none;
+  border-radius: 2px;
 }
 
 .vote-option-button:hover {
@@ -131,6 +146,16 @@ progress[value]::-webkit-progress-value {
   color: white;
   /*transition: all .5s ease-in-out;
   transform: scale(1.1);*/
+}
+
+.vote-option-button:focus,
+.vote-option-button:active,
+.vote-option-button.active,
+.vote-option-button:focus:active {
+  background-image: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
 
 /*.vote-option-button:hover {
@@ -149,8 +174,8 @@ progress[value]::-webkit-progress-value {
 .add-option-div-two {
   height:46vh;
   text-align: center;
-  font-size: 3vh;
-  line-height: 20vh;
+  font-size: 20px;
+  /*line-height: 20px;*/
   color: #00aeda;
 }
 
@@ -206,39 +231,48 @@ progress[value]::-webkit-progress-value {
   background-color:white;
 }
 
-.footer-md {
+#footer-md {
   background-color:white;
-  height: 15vh;
-  line-height: 15vh;
+  height: 70px;
+  line-height: 70px;
 }
 
-.footer-sm {
+#footer-md>div>a {
+  margin-right: 10px;
+}
+
+#footer-sm {
   background-color:white;
-  height: 30vh;
-  line-height: 15vh;
+  height: 113px;
+  line-height: 75px;
   text-align: center;
 }
 
-.footer-xs {
+#footer-sm>div>a {
+  margin-right: 10px;
+}
+
+#footer-xs {
   background-color:white;
-  height: 15vh;
-  line-height: 15vh;
+  height: 70px;
+  line-height: 70px;
   text-align: center;
 }
 
 .footer-md-icon {
   text-align:right;
-  font-size:3vh;
+  font-size:20px;
 }
 
 .footer-sm-icon {
   text-align:center;
-  font-size:3vh;
+  font-size:20px;
+  margin-top: -35px;
 }
 
 .footer-xs-icon {
   text-align:center;
-  font-size:3vh;
+  font-size:20px;
 }
 
 .dropdown-menu>li>a:focus,
@@ -252,4 +286,30 @@ progress[value]::-webkit-progress-value {
 
 .dropdown-menu>li>a {
   letter-spacing: 2px;
+}
+
+.special {
+  width: 100%;
+  color: transparent;
+  border: none;
+  background-color: transparent;
+  padding: 10px;
+}
+
+.special:hover {
+  background-color: transparent;
+  color:transparent:
+  border: none;
+  color: transparent;
+  cursor: default;
+}
+
+.special:focus,
+.special:active,
+.special.active,
+.special:focus:active {
+  background-image: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
